testsuite/tests/v1/patterns/list/pattern_after_splat/test.out
Error: Sub-pattern after a splat one
   ╭─[ <working-dir>/script.lkql:1:19 ]
   │
 1 │ [] is [1, 2, ..., 3]
   │              ─┬─  ┬  
   │               │   ╰── This sub-pattern is after a splat one
   │               │      
   │               ╰────── Hint: Previous splat pattern is here
───╯
